{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 94,
  "lineage": "d7c1fbc8-7194-7aa6-5c5a-b2536831941c",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:security-group/sg-0a45e38854eb4c856",
            "description": "Security group for ECS tasks",
            "egress": [],
            "id": "sg-0a45e38854eb4c856",
            "ingress": [],
            "name": "fintech-ecs-sg",
            "name_prefix": "",
            "owner_id": "067970016113",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "sg-0a45e38854eb4c856",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:security-group/sg-005a501b5c3876f6b",
            "description": "Security group for ElastiCache Redis",
            "egress": [],
            "id": "sg-005a501b5c3876f6b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a45e38854eb4c856"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fintech-redis-sg",
            "name_prefix": "",
            "owner_id": "067970016113",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "sg-005a501b5c3876f6b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ecs_to_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 6379,
            "id": "sgrule-582845468",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-005a501b5c3876f6b",
            "security_group_rule_id": "sgr-08dbc376823796c16",
            "self": false,
            "source_security_group_id": "sg-0a45e38854eb4c856",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ecs.aws_security_group.ecs_sg",
            "module.elasticache.aws_security_group.redis_sg",
            "module.vpc.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:security-group/sg-08c4cd586d5057d0d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c4cd586d5057d0d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a45e38854eb4c856"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "fintech-db-sg",
            "name_prefix": "",
            "owner_id": "067970016113",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Production",
              "Project": "FinTech"
            },
            "tags_all": {
              "Environment": "Production",
              "Project": "FinTech"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "sg-08c4cd586d5057d0d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ecf525df4de2c04",
            "arn": "arn:aws:ec2:us-east-1:067970016113:elastic-ip/eipalloc-03ecf525df4de2c04",
            "association_id": "eipassoc-0ddccf8d486ab351e",
            "domain": "vpc",
            "id": "eipalloc-03ecf525df4de2c04",
            "network_border_group": "us-east-1",
            "network_interface": "eni-072a478270ccd74bd",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-52-7-33-134.compute-1.amazonaws.com",
            "public_ip": "52.7.33.134",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:internet-gateway/igw-0d58eaaabb55c7b5b",
            "id": "igw-0d58eaaabb55c7b5b",
            "owner_id": "067970016113",
            "region": "us-east-1",
            "tags": {
              "Name": "fintech-igw"
            },
            "tags_all": {
              "Name": "fintech-igw"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03ecf525df4de2c04",
            "association_id": "eipassoc-0ddccf8d486ab351e",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0e2520e48dbe2240d",
            "network_interface_id": "eni-072a478270ccd74bd",
            "private_ip": "10.0.1.143",
            "public_ip": "52.7.33.134",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0578c85494cd60f4f",
            "tags": {
              "Name": "fintech-nat-gw"
            },
            "tags_all": {
              "Name": "fintech-nat-gw"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.prod",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-05facbfb7bedc3b25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05facbfb7bedc3b25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fintech-db-az-a"
            },
            "tags_all": {
              "Name": "fintech-db-az-a"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "subnet-05facbfb7bedc3b25",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-01588704179390e5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01588704179390e5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fintech-db-az-b"
            },
            "tags_all": {
              "Name": "fintech-db-az-b"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "subnet-01588704179390e5b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-04cc63a1d5cf2af34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cc63a1d5cf2af34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fintech-private-app-az-a"
            },
            "tags_all": {
              "Name": "fintech-private-app-az-a"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "subnet-04cc63a1d5cf2af34",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-0e6348614d0e89245",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6348614d0e89245",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fintech-private-app-az-b"
            },
            "tags_all": {
              "Name": "fintech-private-app-az-b"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "subnet-0e6348614d0e89245",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-0578c85494cd60f4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0578c85494cd60f4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fintech-public-az-a"
            },
            "tags_all": {
              "Name": "fintech-public-az-a"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "subnet-0578c85494cd60f4f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:subnet/subnet-00afa9955c47ef6ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00afa9955c47ef6ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "067970016113",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "fintech-public-az-b"
            },
            "tags_all": {
              "Name": "fintech-public-az-b"
            },
            "vpc_id": "vpc-0d7dca2f7f3c9bee0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "subnet-00afa9955c47ef6ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.prod",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:067970016113:vpc/vpc-0d7dca2f7f3c9bee0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d858b47abd01326d",
            "default_route_table_id": "rtb-0819922bebf4e547a",
            "default_security_group_id": "sg-04e9ca33405cedbeb",
            "dhcp_options_id": "dopt-02a4642077c18bf56",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d7dca2f7f3c9bee0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0819922bebf4e547a",
            "owner_id": "067970016113",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "fintech-prod-vpc"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "fintech-prod-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "067970016113",
            "id": "vpc-0d7dca2f7f3c9bee0",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}